add grpc-gateway dep

--- a/proto/buf.yaml
+++ b/proto/buf.yaml
@@ -9,7 +9,7 @@ deps:
   - buf.build/cosmos/cosmos-proto
   - buf.build/cosmos/gogo-proto
   - buf.build/googleapis/googleapis
-
+  - buf.build/grpc-ecosystem/grpc-gateway
 breaking:
   use:
     - FILE
