--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -51,24 +51,24 @@ jobs:
           version: v1.47
           args: --config .github/linters/.golangci.yaml
 
-  proto-lint:
-    name: "Protobuf"
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v3
+  # proto-lint:
+  #   name: "Protobuf"
+  #   runs-on: ubuntu-20.04
+  #   steps:
+  #     - uses: actions/checkout@v3
       
-      # Install the `buf` CLI
-      - uses: bufbuild/buf-setup-action@v1.10.0
+  #     # Install the `buf` CLI
+  #     - uses: bufbuild/buf-setup-action@v1.10.0
       
-      # Lint
-      - uses: bufbuild/buf-lint-action@v1
+  #     # Lint
+  #     - uses: bufbuild/buf-lint-action@v1
       
-      # Breaking change detection
-      - uses: bufbuild/buf-breaking-action@v1
-        continue-on-error: true
-        with:
-          input: 'proto'
-          against: 'https://github.com/cheqd/cheqd-node.git#branch=release/0.6.x,ref=HEAD~1,subdir=proto'
+  #     # Breaking change detection
+  #     - uses: bufbuild/buf-breaking-action@v1
+  #       continue-on-error: true
+  #       with:
+  #         input: 'proto'
+  #         against: 'https://github.com/cheqd/cheqd-node.git#branch=release/0.6.x,ref=HEAD~1,subdir=proto'
 
   super-lint:
     name: "Super Linter"
