--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,10 +70,10 @@ jobs:
           echo ::set-output name=RELEASE_VERSION::"$RELEASE_VERSION"
 
       # Push Protobufs to Buf.build registry
-      - uses: bufbuild/buf-push-action@v1
-        with:
-          input: proto
-          buf_token: ${{ secrets.BUF_TOKEN }}
+      # - uses: bufbuild/buf-push-action@v1
+      #   with:
+      #     input: proto
+      #     buf_token: ${{ secrets.BUF_TOKEN }}
 
   release-docker:
     name: "Docker image"
