chore: Backport changes from main to release v0.6.x maintenance branch (#488)
* fix(installer): Backport to v0.6.x release branch (#379)

* dragonberry

* dragonberry

* build: Backport workflow and other fixes to release/0.6.x branch [DEV-1822] (#410)

* feat(installer): Get installer to handle multi-platform binaries [DEV-1667] (#376)
* Add support for determining the correct Github Release asset based on OS type and architecture
* Set recommended Docker image version

Signed-off-by: Andrew Nikitin <andrew.nikitin@evernym.com>
Co-authored-by: Andrew Nikitin <andrew.nikitin@evernym.com>

* fix(release): Bump semantic release package (#377)
Bump semantic release

* ci: Add v0.6.x release branch (#378)
Update .releaserc.json

* chore(deps-dev): Bump semantic-release from 19.0.4 to 19.0.5 (#383)
Bumps [semantic-release](https://github.com/semantic-release/semantic-release) from 19.0.4 to 19.0.5.
- [Release notes](https://github.com/semantic-release/semantic-release/releases)
- [Commits](https://github.com/semantic-release/semantic-release/compare/v19.0.4...v19.0.5)

---
updated-dependencies:
- dependency-name: semantic-release
  dependency-type: direct:development
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* bump: Proto dependencies (#391)

* chore(deps): Bump bufbuild/buf-setup-action from 1.7.0 to 1.8.0 (#393)

Bumps [bufbuild/buf-setup-action](https://github.com/bufbuild/buf-setup-action) from 1.7.0 to 1.8.0.
- [Release notes](https://github.com/bufbuild/buf-setup-action/releases)
- [Commits](https://github.com/bufbuild/buf-setup-action/compare/v1.7.0...v1.8.0)

---
updated-dependencies:
- dependency-name: bufbuild/buf-setup-action
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,7 +10,7 @@ jobs:
 
   sh-euox-pipefail-check:
     name: "Shell pipefail check"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     
     steps:
       - uses: actions/checkout@v3
@@ -20,7 +20,7 @@ jobs:
   
   md-link-check:
     name: "Broken Markdown links"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     
     steps:
       - uses: actions/checkout@v3
@@ -35,7 +35,7 @@ jobs:
     # We can't use VALIDATE_GO from super linter because of this issue:
     # https://github.com/github/super-linter/issues/143
     name: "Golang"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     
     steps:
       - uses: actions/checkout@v3
@@ -51,15 +51,34 @@ jobs:
           version: v1.47
           args: --config .github/linters/.golangci.yaml
 
+  # proto-lint:
+  #   name: "Protobuf"
+  #   runs-on: ubuntu-20.04
+  #   steps:
+  #     - uses: actions/checkout@v3
+      
+  #     # Install the `buf` CLI
+  #     - uses: bufbuild/buf-setup-action@v1.10.0
+      
+  #     # Lint
+  #     - uses: bufbuild/buf-lint-action@v1
+      
+  #     # Breaking change detection
+  #     - uses: bufbuild/buf-breaking-action@v1
+  #       continue-on-error: true
+  #       with:
+  #         input: 'proto'
+  #         against: 'https://github.com/cheqd/cheqd-node.git#branch=release/0.6.x,ref=HEAD~1,subdir=proto'
+
   super-lint:
     name: "Super Linter"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     
     steps:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0 # Required to fetch version
-    
+
     - name: Run Super Linter
       uses: github/super-linter/slim@v4
       env:
