--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
 
   release-binary:
     name: "Node binary"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     outputs:
       RELEASE_VERSION: ${{ steps.set-version.outputs.RELEASE_VERSION }}
     
@@ -31,17 +31,17 @@ jobs:
       # Node.js setup is needed to run Semantic Release
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
 
       # Setup for pushing to Buf.build later
-      - uses: bufbuild/buf-setup-action@v1.8.0
+      - uses: bufbuild/buf-setup-action@v1.10.0
 
       # Required for short-lived token provided to Semantic Release
       - name: "Obtain Github App token"
         id: app-token
-        uses: getsentry/action-github-app-token@v1.0.6
+        uses: getsentry/action-github-app-token@v2.0.0
         with:
           app_id: ${{ secrets.BOT_APP_ID }}
           private_key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
@@ -70,22 +70,21 @@ jobs:
           echo ::set-output name=RELEASE_VERSION::"$RELEASE_VERSION"
 
       # Push Protobufs to Buf.build registry
-      - uses: bufbuild/buf-push-action@v1
-        with:
-          input: proto
-          buf_token: ${{ secrets.BUF_TOKEN }}
+      # - uses: bufbuild/buf-push-action@v1
+      #   with:
+      #     input: proto
+      #     buf_token: ${{ secrets.BUF_TOKEN }}
 
   release-docker:
     name: "Docker image"
     needs: release-binary
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     env:
       IMAGE_NAME: ${{ github.repository }}
 
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # Required to fetch version
           persist-credentials: false
 
       - name: Set up Docker Buildx
@@ -127,4 +126,4 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-to: type=gha,mode=min
