ci: Remove Semantic Release from release/0.6.x branch

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,8 @@
 name: "Release"
 on:
-  workflow_call:
+  push:
+    branches:
+      - release/0.6.x
 defaults:
   run:
     shell: bash
@@ -28,31 +30,8 @@ jobs:
           go-version-file: ./go.mod
           cache: true
 
-      # Node.js setup is needed to run Semantic Release
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'npm'
-          cache-dependency-path: '**/package-lock.json'
-
       # Setup for pushing to Buf.build later
       - uses: bufbuild/buf-setup-action@v1.10.0
-
-      # Required for short-lived token provided to Semantic Release
-      - name: "Obtain Github App token"
-        id: app-token
-        uses: getsentry/action-github-app-token@v2.0.0
-        with:
-          app_id: ${{ secrets.BOT_APP_ID }}
-          private_key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
-
-      - name: "Install Semantic Release dependencies"
-        run: npm ci
-
-      - name: "Execute Semantic Release"
-        run: npx semantic-release
-        env:
-          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v3
