--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -116,9 +116,11 @@ jobs:
       - name: Download old node binary (mainnet-latest)
         run: |
           mkdir -p ${{ env.RUNNER_BIN_DIR }}
-          wget -c https://github.com/cheqd/cheqd-node/releases/download/v0.6.9/cheqd-noded-0.6.9-Linux-x86_64.tar.gz
-          tar -xvf cheqd-noded-0.6.9-Linux-x86_64.tar.gz -C ${{ env.RUNNER_BIN_DIR }} --strip-components=1
+          wget -c https://github.com/cheqd/cheqd-node/releases/download/v"${LEGACY_VERSION}"/cheqd-noded-"${LEGACY_VERSION}"-Linux-x86_64.tar.gz
+          tar -xvf cheqd-noded-"${LEGACY_VERSION}"-Linux-x86_64.tar.gz -C ${{ env.RUNNER_BIN_DIR }}
           sudo chmod +x ${{ env.RUNNER_BIN_DIR }}/cheqd-noded
+        env:
+          LEGACY_VERSION: 0.6.10
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
