--- a/docker/persistent-chains/docker-compose.env
+++ b/docker/persistent-chains/docker-compose.env
@@ -11,9 +11,9 @@
 CHEQD_NETWORK="mainnet"
 
 # Define cheqd-noded software release version
-# Current MAINNET recommended version: 0.6.7
-# Current TESTNET recommended version: 0.6.7
-DOCKER_IMAGE_VERSION="v1.0.0"
+# Current MAINNET recommended version: 0.6.10
+# Current TESTNET recommended version: 0.6.10
+DOCKER_IMAGE_VERSION="0.6.10"
 
 
 ###############################################################
