fix: Get installer working with testnet-5 [DEV-2001] (#490)
* Update legacy version in test pipeline

* Update comment in app.gox

* Provide github token

* Remove strip components

* ci: Execute interactive installer test [DEV-1944] (#460)

* remove configureCmd

* remove post_install method from installer.py

* remove add-observer.sh from upgrade/cosmovisor

* remove add-observer.sh from interactive-install

* remove post_install method usage

* keep post_install method empty

* Update config.toml and app.toml defaults

* Bump alpine image version to latest

* Update default persistent flags

* Set --gas flag correctly

* Delete legacy interactive test folder

* Add installer test to workflow

* Update package-lock.json

* Fix workflow syntax error in interactive-installer job

* add questionary to bump cosmovisor

* move bump logic to setup_cosmovisor

* Check for success

* Change existing install check

* Update existing installation check

* Update installer check

* Fix linter issue

* Update test.yml

* Fix linter error

* Update test.yml

* Debugging installer flow

* Update build.yml

* Set up tmate on failure

* Try Andrew's technique

* Change home path

* Fix home path

* Update installer.py

* auto detect os arch for cosmovisor binary

* set default bump cosmovisor to yes

* set correct OS arch

* keep first install steps only in setup_cosmovisor

* set cosmovisor ENV vars

* remove sudo from export

* write to .profile using python

* Move filesx

* fix path to .profile

* log cosmovisor version when upgrade

* update .profile for current session

* exec source ~/.profile without stdout

* add execute permission

* Update installer.py

* add try/except

* get version anyway

* suppress err in bash

* add new line

* Delete outdated Cosmovisor check

* Create answers.txt

* Disable tmate

* use v1.2.0 instead

* try appending to .bashrc


--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,29 @@ permissions:
 
 jobs:
 
+  interactive-installer:
+    name: "Interactive Installer"
+    runs-on: ubuntu-20.04
+  
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: "Fresh install"
+        working-directory: ./installer
+        run: |
+          sudo bash -c "python3 installer.py < install-from-scratch.txt"
+
+      - name: "Upgrade existing installation"
+        working-directory: ./installer
+        run: |
+          sudo bash -c "python3 installer.py < upgrade-existing.txt"
+
+      - name: Debugging with tmate
+        if: ${{ failure() }}
+        uses: mxschmitt/action-tmate@v3.13
+        with:
+          timeout-minutes: 15
+
   unit-tests:
     name: "Unit Tests"
     runs-on: ubuntu-20.04
@@ -116,9 +139,11 @@ jobs:
       - name: Download old node binary (mainnet-latest)
         run: |
           mkdir -p ${{ env.RUNNER_BIN_DIR }}
-          wget -c https://github.com/cheqd/cheqd-node/releases/download/v0.6.9/cheqd-noded-0.6.9-Linux-x86_64.tar.gz
-          tar -xvf cheqd-noded-0.6.9-Linux-x86_64.tar.gz -C ${{ env.RUNNER_BIN_DIR }} --strip-components=1
+          wget -c https://github.com/cheqd/cheqd-node/releases/download/v"${LEGACY_VERSION}"/cheqd-noded-"${LEGACY_VERSION}"-Linux-x86_64.tar.gz
+          tar -xvf cheqd-noded-"${LEGACY_VERSION}"-Linux-x86_64.tar.gz -C ${{ env.RUNNER_BIN_DIR }}
           sudo chmod +x ${{ env.RUNNER_BIN_DIR }}/cheqd-noded
+        env:
+          LEGACY_VERSION: 0.6.10
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
