--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -60,7 +60,7 @@ jobs:
       # Install the `buf` CLI
       - uses: bufbuild/buf-setup-action@v1.10.0
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
       
       # Lint
       - uses: bufbuild/buf-lint-action@v1
