--- a/proto/buf.yaml
+++ b/proto/buf.yaml
@@ -5,9 +5,9 @@ version: v1
 name: buf.build/cheqd/proto
 
 deps:
-  - buf.build/cosmos/cosmos-sdk
-  - buf.build/cosmos/cosmos-proto
-  - buf.build/cosmos/gogo-proto
+  - buf.build/cosmos/cosmos-sdk:a4d885fe2ad0a999c3486fd83bb998c416fe38c8 # Cosmos SDK v0.46.7
+  - buf.build/cosmos/cosmos-proto:1935555c206d4afb9e94615dfd0fad31 # Cosmos SDK v0.46.7
+  - buf.build/cosmos/gogo-proto:34d970b699f84aa382f3c29773a60836 # Cosmos SDK v0.46.7
   - buf.build/googleapis/googleapis
 breaking:
   use:
