--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -10,7 +10,7 @@ before:
     - make clean
     - go mod tidy
     - go mod download
-    - make proto-all
+    - make proto-gen
 
 builds:
   - id: ubuntu-latest-amd64
