--- a/.github/linters/.golangci.yaml
+++ b/.github/linters/.golangci.yaml
@@ -4,17 +4,33 @@ run:
 
 linters:
   enable:
+    - bodyclose
     - deadcode
+    - depguard
+    - dogsled
     - errcheck
-    - gosimple
+    - exportloopref
+    - goconst
+    - gocritic
+    - gofmt
     - gofumpt
+    - goimports
+    - gosec
+    - gosimple
     - govet
     - ineffassign
     - misspell
+    - nakedret
     - nestif
+    - nolintlint
+    - prealloc
+    - revive
     - staticcheck
     - structcheck
+    - stylecheck
     - typecheck
+    - unconvert
+    - unparam
     - unused
     - varcheck
 
@@ -27,3 +43,5 @@ linters-settings:
   misspell:
     ignore-words:
       - cheqd
+      - cheq
+      - ncheq
