--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,7 +69,7 @@ jobs:
         id: set-version
         run: |
           RELEASE_VERSION=$( git describe --tags ${{ github.sha }})
-          echo "name=RELEASE_VERSION::"$RELEASE_VERSION"" >> "$GITHUB_OUTPUT"
+          echo "name=RELEASE_VERSION::$RELEASE_VERSION" >> $GITHUB_OUTPUT
 
       # Push Protobufs to Buf.build registry
       - uses: bufbuild/buf-push-action@v1
