--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,8 +68,8 @@ jobs:
       - name: Set release version number
         id: set-version
         run: |
-          RELEASE_VERSION=$( git describe --tags ${{ github.sha }})
-          echo "name=RELEASE_VERSION::$RELEASE_VERSION" >> $GITHUB_OUTPUT
+          RELEASE_VERSION=$( git describe --tags "${{ github.sha }}")
+          echo "name=RELEASE_VERSION::$RELEASE_VERSION" >> "$GITHUB_OUTPUT"
 
       # Push Protobufs to Buf.build registry
       - uses: bufbuild/buf-push-action@v1
