feat(keys): Ed25519VerificationKey2020 full spec compliant & add 2018 support [DEV-2017] (#497)
* Make VerificationMethod validation as in spec

* Change generated jsons for unit upgrade tests

* Makes linter happy

* Makes linter happy

* Makes linter happy

* Fix integration tests

* Remove unused imports

* Change comparision check

* Add changes for generated files

* Added Ed25519VerificationKey2018 support & enhanced tests

* Fixed namings

* Temp disabled

* Temp disabled

* Fixed deprecated print

* Removed bloat

* Fixed shellcheck

* Fixed bash shellcheck & restored bash linters

* Ignored `sed` extension

* Fixed widespread namings

* Ignored on legacy

* Update release.yml

* Update gen-network-config.sh

Fixes shellcheck SC2086

* Rename pubKeyMultibase to publicKeyMultibase

This makes it consistent with the actual standard, although this is mostly cosmetic

* Fix SED_EXT shellcheck in legacy tests

* Fix SED_EXT setting

* Typo fixes

* Ignore files a bit differently

* Fix lint checks

* Update .goreleaser.yml

* Update Dockerfile

* Update build.yml

* Update Golang linter settings

* Remove gosec nolint

* Remove unused comments

* Add TODO for nolint comments that need to be removed

* Update buf.lock

* buf format

* Fix stylecheck

* Fix alpine version

* Update build.yml

* Work super linter only on diffs

* Lint all codebase on release

Co-authored-by: Ankur Banerjee <ankurdotb@users.noreply.github.com>
Co-authored-by: Tasos Derisiotis <50984242+Eengineer1@users.noreply.github.com>

--- a/.github/linters/.golangci.yaml
+++ b/.github/linters/.golangci.yaml
@@ -1,10 +1,5 @@
 run:
   timeout: 10m
-  # skip-dirs:
-  #   - x/did/keeper/v1
-  #   - x/did/types/v1
-  #   - x/resource/keeper/v1
-  #   - x/resource/types/v1
 
 
 linters:
@@ -18,7 +13,6 @@ linters:
     - gocritic
     - gofumpt
     - goimports
-    - gosec
     - gosimple
     - govet
     - ineffassign
@@ -26,17 +20,27 @@ linters:
     - nakedret
     - nestif
     - nolintlint
-    - prealloc
-    - revive
     - staticcheck
     - stylecheck
     - typecheck
     - unconvert
-    - unparam
     - unused
 
 
 linters-settings:
+  dogsled:
+    # Checks assignments with too many blank identifiers.
+    # Default: 2
+    max-blank-identifiers: 3
+
+  gocritic:
+    # Which checks should be disabled; can't be combined with 'enabled-checks'.
+    # See https://go-critic.github.io/overview#checks-overview.
+    # Default: []
+    disabled-checks:
+      - regexpMust
+      - badCall # Remove this after CI workflow PR
+
   gofumpt:
     lang-version: "1.18"
     
@@ -45,3 +49,16 @@ linters-settings:
       - cheqd
       - cheq
       - ncheq
+
+  stylecheck:
+    # Select the Go version to target.
+    go: "1.18"
+    # STxxxx checks in https://staticcheck.io/docs/configuration/options/#checks
+    # Default: ["*"]
+    checks: ["all"]
+    # https://staticcheck.io/docs/configuration/options/#dot_import_whitelist
+    dot-import-whitelist:
+      - "github.com/cheqd/cheqd-node/x/did/utils"
+      - "github.com/onsi/gomega"
+    # https://staticcheck.io/docs/configuration/options/#initialisms
+    initialisms: ["ACL", "API", "ASCII", "CPU", "CSS", "DNS", "EOF", "GUID", "HTML", "HTTP", "HTTPS", "ID", "IP", "JSON", "QPS", "RAM", "RPC", "SLA", "SMTP", "SQL", "SSH", "TCP", "TLS", "TTL", "UDP", "UI", "GID", "UID", "UUID", "URI", "URL", "UTF8", "VM", "XML", "XMPP", "XSRF", "XSS", "SIP", "RTP", "AMQP", "DB", "TS"]
