--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -64,12 +64,14 @@ jobs:
       
       # Lint
       - uses: bufbuild/buf-lint-action@v1
+        with:
+          input: proto
       
       # Breaking change detection
       - uses: bufbuild/buf-breaking-action@v1
         continue-on-error: true
         with:
-          input: 'proto'
+          input: proto
           against: 'https://github.com/cheqd/cheqd-node.git#branch=main,ref=HEAD~1,subdir=proto'
 
   super-lint:
