--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,9 @@ permissions:
 
 
 jobs:
-  # Super Linter only runs on diffs in PRs, so we run it on VALIDATE_ALL_CODEBASE=true before release
+  # Super Linter only runs on diffs in PRs
+  # For release, we run it on VALIDATE_ALL_CODEBASE=true
+  # List of languages enabled is smaller than in lint workflow
   super-lint:
     name: "Super Linter"
     runs-on: ubuntu-20.04
@@ -32,10 +34,7 @@ jobs:
 
         VALIDATE_BASH: true
         VALIDATE_DOCKERFILE_HADOLINT: true
-        VALIDATE_ENV: true
-        VALIDATE_GITHUB_ACTIONS: true
         VALIDATE_JSON: true
-        VALIDATE_MARKDOWN: true
         VALIDATE_OPENAPI: true
         VALIDATE_PYTHON_PYLINT: true
         VALIDATE_XML: true
@@ -68,14 +67,14 @@ jobs:
           cache-dependency-path: '**/package-lock.json'
 
       # Setup for pushing to Buf.build later
-      - uses: bufbuild/buf-setup-action@v1.11.0
+      - uses: bufbuild/buf-setup-action@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
       # Required for short-lived token provided to Semantic Release
       - name: "Obtain Github App token"
         id: app-token
-        uses: getsentry/action-github-app-token@v2.0.0
+        uses: getsentry/action-github-app-token@v2
         with:
           app_id: ${{ secrets.BOT_APP_ID }}
           private_key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
@@ -108,6 +107,7 @@ jobs:
         with:
           input: proto
           buf_token: ${{ secrets.BUF_TOKEN }}
+          draft: ${{ github.ref_name != 'main'}}
 
   release-docker:
     name: "Docker image"
