--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
       - name: "Fresh install"
         working-directory: ./installer
         run: |
-          sudo bash -c "python3 installer.py < install-from-scratch.txt"
+          sudo -E bash -c "python3 installer.py < install-from-scratch.txt"
 
       - name: "Upgrade existing installation"
         working-directory: ./installer
