--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
 ### APP-SPECIFIC EXCLUSIONS ###
+
+# Ignored directories
+api/docs/cheqd/
 build/
 dist/
-
-# Tests
 **/network-config
-**/node_configs
 
-# Python
-.pytest_cache
-**/__pycache__
+# Ignored files
+
 
 ### GENERAL EXCLUSIONS ###
 
