fix(ibc): Fixed router seal & legacy bash tests latest working state

--- a/tests/legacy/ibc-defi/docker-compose.yaml
+++ b/tests/legacy/ibc-defi/docker-compose.yaml
@@ -2,11 +2,12 @@ version: '3.7'
 
 services:
   cheqd:
-    image: cheqd
+    image: cheqd-node:develop
     build:
-      context: ../../..
+      context: ../../../
       dockerfile: docker/Dockerfile
-      target: base
+      tags:
+        - "cheqd-node:develop"
     ports:
       - "26656:26656" # p2p
       - "26657:26657" # rpc
@@ -33,7 +34,7 @@ services:
       dockerfile: hermes.Dockerfile
     configs:
       - source: hermes-config
-        target: /hermes/.hermes/config.toml
+        target: /home/hermes/.hermes/config.toml
     ports:
       - "3000:3000" # rest
       - "3001:3001" # telemetry
