Add test for checking systemctl cheqd-cosmovisor.service

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,11 @@ jobs:
         working-directory: ./installer
         run: |
           sudo bash -c "python3 installer.py < install-from-scratch.txt"
+      
+      - name: "Check systemctl cheqd-cosmovisor.service"
+        working-directory: ./installer
+        run: |
+          systemctl daemon-reload && systemctl is-active --quiet cheqd-cosmovisor.service
 
       - name: "Upgrade existing installation"
         working-directory: ./installer
