--- a/tests/legacy/ibc-defi/hermes/config.toml
+++ b/tests/legacy/ibc-defi/hermes/config.toml
@@ -2,7 +2,7 @@
 # client_id, connection_id, channel_id and port_id
 
 [global]
-log_level = 'info'
+log_level = 'debug'
 
 [mode]
 
@@ -65,7 +65,7 @@ key_name = 'osmosis-key'
 store_prefix = 'ibc'
 default_gas = 100000
 max_gas = 400000
-gas_price = { price = 0, denom = 'stake' }
+gas_price = { price = 0, denom = 'uosmo' }
 gas_multiplier = 1.3
 max_msg_num = 30
 max_tx_size = 2097152
