Remove custom external images from Dockerfile

--- a/tests/legacy/ibc-defi/docker-compose.yaml
+++ b/tests/legacy/ibc-defi/docker-compose.yaml
@@ -2,12 +2,10 @@ version: '3.7'
 
 services:
   cheqd:
-    image: cheqd-node:develop
+    image: cheqd/cheqd-node:build-latest
     build:
       context: ../../../
       dockerfile: docker/Dockerfile
-      tags:
-        - "cheqd-node:develop"
     ports:
       - "26656:26656" # p2p
       - "26657:26657" # rpc
@@ -16,10 +14,7 @@ services:
     entrypoint: tail -f /dev/null
 
   osmosis:
-    image: osmosis
-    build:
-      context: osmosis
-      dockerfile: osmosis.Dockerfile
+    image: osmolabs/osmosis:13-alpine
     ports:
       - "26666:26656" # p2p
       - "26667:26657" # rpc
@@ -28,10 +23,7 @@ services:
     entrypoint: tail -f /dev/null
 
   hermes:
-    image: hermes
-    build:
-      context: ./hermes
-      dockerfile: hermes.Dockerfile
+    image: informalsystems/hermes:1.2.0
     configs:
       - source: hermes-config
         target: /home/hermes/.hermes/config.toml
