--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,8 @@ permissions:
 
 jobs:
 
-  interactive-installer:
-    name: "Interactive Installer"
+  interactive-installer-with-cosmovisor:
+    name: "Interactive Installer with cosmovisor"
     runs-on: ubuntu-20.04
   
     steps:
@@ -24,16 +24,34 @@ jobs:
         working-directory: ./installer
         run: |
           sudo bash -c "python3 installer.py < install-from-scratch.txt"
-      
-      - name: "Check systemctl cheqd-cosmovisor.service"
-        working-directory: ./installer
-        run: |
-          sudo systemctl daemon-reload && sudo systemctl is-active --quiet cheqd-cosmovisor.service
 
       - name: "Upgrade existing installation"
         working-directory: ./installer
         run: |
-          sudo bash -c "python3 installer.py < upgrade-existing.txt"
+          sudo bash -c "python3 installer.py < upgrade-existing-with-cosmovisor.txt"
+
+      - name: Debugging with tmate
+        if: ${{ failure() }}
+        uses: mxschmitt/action-tmate@v3.13
+        with:
+          timeout-minutes: 10
+    
+  interactive-installer-without-cosmovisor:
+    name: "Interactive Installer without cosmovisor"
+    runs-on: ubuntu-20.04
+  
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: "Fresh install"
+        working-directory: ./installer
+        run: |
+          sudo bash -c "python3 installer.py < install-from-scratch-without-cosmovisor.txt"
+
+      - name: "Upgrade existing installation"
+        working-directory: ./installer
+        run: |
+          sudo bash -c "python3 installer.py < upgrade-existing-without-cosmovisor.txt"
 
       - name: Debugging with tmate
         if: ${{ failure() }}
