--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,3 +78,9 @@ jobs:
         with:
           name: cheqd-node-build.tar
           path: /tmp/cheqd-node-build.tar
+
+      - name: Debugging with tmate
+        if: ${{ !failure() }}
+        uses: mxschmitt/action-tmate@v3.13
+        with:
+          timeout-minutes: 10
