--- a/build-tools/node-cosmovisor.service
+++ b/build-tools/node-cosmovisor.service
@@ -6,8 +6,9 @@ Documentation=https://docs.cheqd.io/node
 [Service]
 Environment="DAEMON_HOME={CHEQD_ROOT_DIR}"
 Environment="DAEMON_NAME={CHEQD_BINARY_NAME}"
-Environment="DAEMON_ALLOW_DOWNLOAD_BINARIES=true"
-Environment="DAEMON_RESTART_AFTER_UPGRADE=true"
+Environment="DAEMON_ALLOW_DOWNLOAD_BINARIES={COSMOVISOR_DAEMON_ALLOW_DOWNLOAD_BINARIES}"
+Environment="DAEMON_RESTART_AFTER_UPGRADE={COSMOVISOR_DAEMON_RESTART_AFTER_UPGRADE}"
+Environment="DAEMON_POLL_INTERVAL=300s"
 Environment="UNSAFE_SKIP_BACKUP=true"
 Type=simple
 User=cheqd
