--- a/api/docs/config.json
+++ b/api/docs/config.json
@@ -13,6 +13,15 @@
             "url": "https://github.com/cheqd/cheqd-node/blob/main/LICENSE"
         }
     },
+    "paths": {},
+    "apis": [
+        {
+            "url": "./api/docs/cheqd/did/v2/query.swagger.json"
+        },
+        {
+            "url": "./api/docs/cheqd/resource/v2/query.swagger.json"
+        }
+    ],
     "basePath": "/swagger/",
     "schemes": [
         "http",
@@ -31,13 +40,5 @@
     "externalDocs": {
         "description": "cheqd Network Documentation",
         "url": "https://docs.cheqd.io/node"
-    },
-    "apis": [
-        {
-            "url": "./api/docs/cheqd/did/v2/query.swagger.json"
-        },
-        {
-            "url": "./api/docs/cheqd/resource/v2/query.swagger.json"
-        }
-    ]
+    }
 }
