Renamed to match spectral

--- a/.github/linters/.spectral.yaml
+++ b/.github/linters/.spectral.yaml
@@ -2,7 +2,7 @@
 
 ##########################
 ##########################
-## OpenAPI Linter rules ##
+## Spectral Linter rules ##
 ##########################
 ##########################
 
