--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -90,6 +90,7 @@ jobs:
         DEFAULT_BRANCH: main
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         LOG_LEVEL: WARN
+        FILTER_REGEX_EXCLUDE: "**/config.yaml"
         VALIDATE_ALL_CODEBASE: false
         MULTI_STATUS: true
 
