--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -91,7 +91,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         LOG_LEVEL: WARN
         FILTER_REGEX_EXCLUDE: "/github/workspace/api/docs/config.yaml"
-        VALIDATE_ALL_CODEBASE: true
+        VALIDATE_ALL_CODEBASE: false
         MULTI_STATUS: true
 
         VALIDATE_BASH: true
