--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,16 @@
 ### APP-SPECIFIC EXCLUSIONS ###
 
 # Ignored directories
-api/docs/cheqd/**
-api/docs/swagger-ui/**
+api/docs/cheqd/
+api/docs/swagger-ui/
 build/
 dist/
 **/network-config
 
 # Ignored files
 
-
 # Allowed files
-!api/docs/swagger-ui/**/swagger-initializer.js
+
 
 ### GENERAL EXCLUSIONS ###
 
