--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,6 +89,8 @@ jobs:
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v4
+        # Only run GoReleaser if the commit is tagged with a version
+        if: startsWith( git tag --contains ${{ github.sha }} , 'v') == true
         with:
           distribution: goreleaser
           version: latest
