--- a/build-tools/node-cosmovisor.service
+++ b/build-tools/node-cosmovisor.service
@@ -8,8 +8,8 @@ Environment="DAEMON_HOME={CHEQD_ROOT_DIR}"
 Environment="DAEMON_NAME={CHEQD_BINARY_NAME}"
 Environment="DAEMON_ALLOW_DOWNLOAD_BINARIES={COSMOVISOR_DAEMON_ALLOW_DOWNLOAD_BINARIES}"
 Environment="DAEMON_RESTART_AFTER_UPGRADE={COSMOVISOR_DAEMON_RESTART_AFTER_UPGRADE}"
-Environment="DAEMON_POLL_INTERVAL=300s"
-Environment="UNSAFE_SKIP_BACKUP=true"
+Environment="DAEMON_POLL_INTERVAL={DEFAULT_DAEMON_POLL_INTERVAL}"
+Environment="UNSAFE_SKIP_BACKUP={DEFAULT_UNSAFE_SKIP_BACKUP}"
 Type=simple
 User=cheqd
 ExecStart=/usr/bin/cosmovisor run start
