--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -55,13 +55,15 @@ builds:
 
 archives:
   - id: release-archives
-    replacements:
-        darwin: Darwin
-        linux: Linux
-        amd64: x86_64
     format: tar.gz
     wrap_in_directory: false
-    name_template: "{{ .Binary }}-{{ .Version }}-{{ .Os }}-{{ .Arch }}"
+    name_template: >-
+      {{ .Binary }}-
+      {{ .Version }}-
+      {{ .Os }}-
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else }}{{ .Arch }}
+      {{ end }}
 
 checksum:
   algorithm: sha256
