--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,8 +43,8 @@ jobs:
     name: "Interactive Installer Node Standalone"
     runs-on: ubuntu-20.04
   
-  #   steps:
-  #     - uses: actions/checkout@v3
+    steps:
+      - uses: actions/checkout@v3
 
       - name: "Fresh install"
         working-directory: ./installer
@@ -57,10 +57,10 @@ jobs:
           sudo bash -c "DEFAULT_DEBUG_BRANCH='${GITHUB_REF##*/}' python3 installer.py < upgrade-existing-node-standalone.txt"
         
 
-  #     - name: Debugging with tmate
-  #       if: ${{ failure() }}
-  #       uses: mxschmitt/action-tmate@v3
-  #       timeout-minutes: 10
+      - name: Debugging with tmate
+        if: ${{ failure() }}
+        uses: mxschmitt/action-tmate@v3
+        timeout-minutes: 10
 
   unit-tests:
     name: "Unit Tests"
