--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,11 +33,10 @@ jobs:
         run: |
           sudo bash -c "DEFAULT_DEBUG_BRANCH='${GITHUB_REF##*/}' python3 installer.py < upgrade-existing-with-cosmovisor.txt"
 
-      - name: Debugging with tmate
-        if: ${{ failure() }}
-        uses: mxschmitt/action-tmate@v3.13
-        with:
-          timeout-minutes: 10
+      - name: "Upgrade with moving to cosmovisor"
+        working-directory: ./installer
+        run: |
+          sudo bash -c "DEFAULT_DEBUG_BRANCH='${GITHUB_REF##*/}' python3 installer.py < upgrade-to-cosmovisor.txt"
     
   interactive-installer-node-standalone:
     name: "Interactive Installer Node Standalone"
