Add releaser-api workflow to dispatch.yml.

--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -30,3 +30,10 @@ jobs:
     if: ${{ github.ref_protected == true }}
     uses: ./.github/workflows/release.yml
     secrets: inherit
+  
+  call-release-api:
+    name: "Release API"
+    needs: call-release
+    uses: ./.github/workflows/release-api.yml
+    secrets: inherit
+
