--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -18,15 +18,15 @@ jobs:
     uses: ./.github/workflows/build.yml
     secrets: inherit
   
-  call-test:
-    name: "Tests"
-    needs: call-build
-    uses: ./.github/workflows/test.yml
-    secrets: inherit
+  # call-test:
+  #   name: "Tests"
+  #   needs: call-build
+  #   uses: ./.github/workflows/test.yml
+  #   secrets: inherit
 
-  call-release:
-    name: "Release"
-    needs: call-test
-    if: ${{ github.ref_protected == true }}
-    uses: ./.github/workflows/release.yml
-    secrets: inherit
+  # call-release:
+  #   name: "Release"
+  #   needs: call-test
+  #   if: ${{ github.ref_protected == true }}
+  #   uses: ./.github/workflows/release.yml
+  #   secrets: inherit
