Temporary build statement

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,8 @@ jobs:
         with:
           distribution: goreleaser
           version: latest
-          args: build --clean --snapshot --id ubuntu-latest-amd64
+          args: build --clean --snapshot
+          #args: build --clean --snapshot --single-target
 
       - name: Store artifact
         uses: actions/upload-artifact@v3
