--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -12,33 +12,17 @@ before:
     - make proto-gen
 
 builds:
-  - id: ubuntu-latest-amd64
-    main: ./cmd/cheqd-noded
-    binary: cheqd-noded
-    targets:
-      - "linux_amd64"
+  - 
     env:
-      - CGO_ENABLED=1
-    flags:
-      - -mod=readonly
-      - -tags="netgo ledger goleveldb"
-      - -trimpath
-    ldflags:
-      - -s -w
-      - -X github.com/cosmos/cosmos-sdk/version.Name=cheqd-noded 
-      - -X github.com/cosmos/cosmos-sdk/version.AppName=cheqd-noded 
-      - -X github.com/cosmos/cosmos-sdk/version.Version={{ .Version }}
-      - -X github.com/cosmos/cosmos-sdk/version.Commit={{ .Commit }}
-      - -X github.com/cosmos/cosmos-sdk/version.BuildTags=netgo,ledger,goleveldb
-
-  - id: ubuntu-latest-arm64
+      - CGO_ENABLED=0
     main: ./cmd/cheqd-noded
     binary: cheqd-noded
-    targets:
-      - "linux_arm64"
-    hooks:
-      pre:
-        - sudo apt update && sudo apt install clang gcc-multilib g++-multilib -y
+    goos:
+      - linux
+      - darwin
+    goarch:
+      - amd64
+      - arm64
     flags:
       - -mod=readonly
       - -tags="netgo ledger goleveldb"
@@ -50,7 +34,6 @@ builds:
       - -X github.com/cosmos/cosmos-sdk/version.Version={{ .Version }}
       - -X github.com/cosmos/cosmos-sdk/version.Commit={{ .Commit }}
       - -X github.com/cosmos/cosmos-sdk/version.BuildTags=netgo,ledger,goleveldb
-
 
 archives:
   - id: release-archives
